# Newlib

./: config.sub
newlib/: configure.host
newlib/libc/include/: limits.h  string.h
newlib/libc/include/nanvix/: pm.h
newlib/libc/include/sys/: errno.h  signal.h  stat.h  types.h
newlib/libc/locale/: lmonetary.c  lnumeric.c
newlib/libc/stdlib/: mallocr.c
newlib/libc/string/: Makefile.in
newlib/libc/sys/: configure.in
newlib/libc/sys/autom4te.cache/: output.0  requests  traces.0
newlib/libc/sys/nanvix/: Makefile.am  Makefile.in  aclocal.m4  configure  execve.c  fork.c  fstat.c  ioctl.c  isatty.c  lseek.c  open.c  read.c  sbrk.c  signal.c  wait.c  write.c
newlib/libc/sys/nanvix/autom4te.cache/: output.0  requests  traces.0  traces.1
